--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.486.0",
-    "next": "15.2.4",
+    "next": "^16.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
